--- a/index.html
+++ b/index.html
@@ -610,25 +610,25 @@
     <footer>
         <ul>
             <li>
-                <a href="/#/index" class="on">
+                <a href="/index" class="on">
                     <div class="ih ispr"></div>
                     <p>首页</p>
                 </a>
             </li>
             <li>
-                <a href="/#/product/category">
+                <a href="/list.html">
                     <div class="ic ispr"></div>
                     <p>分类</p>
                 </a>
             </li>
             <li>
-                <a href="/#/cart/index">
+                <a href="/cart.html">
                     <div class="is ispr"></div>
                     <p>购物车</p>
                 </a>
             </li>
             <li>
-                <a href="/#/user/index">
+                <a href="/space.html">
                     <div class="if ispr"></div>
                     <p>我的</p>
                 </a>
